--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.5.6'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id "org.asciidoctor.jvm.convert" version '3.3.2' // (1)
 }
 
 group = 'me'
@@ -19,9 +20,22 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc' // (2)
 
 }
 
+// (3)
+ext {
+	snippetsDir = file('build/generated-snippets')
+}
+
 test {
+	outputs.dir snippetsDir // (4)
 	useJUnitPlatform()
+}
+
+// (5)
+asciidoctor {
+	dependsOn test
+	inputs.dir snippetsDir
 }
