--- a/build.gradle
+++ b/build.gradle
@@ -39,3 +39,22 @@ asciidoctor {
 	dependsOn test
 	inputs.dir snippetsDir
 }
+
+// (6)
+bootJar {
+	dependsOn asciidoctor
+	from ("${asciidoctor.outputDir}/html5") {
+		into 'static/docs'
+	}
+}
+
+// (7)
+task copyDocument(type: Copy) {
+	dependsOn asciidoctor
+	from file("build/docs/asciidoc")
+	into file("src/main/resources/static/docs")
+}
+
+build {
+	dependsOn copyDocument
+}
