--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'me'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0-SPRING-REST-DOCS-MEMO'
 sourceCompatibility = '11'
 
 repositories {
